fix: transition过渡动效不正确、scrollbar样式mixin

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@ body {
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
     Microsoft YaHei, Arial, sans-serif;
+  @include scrollBar();
 }
 
 #app {
