--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -27,6 +27,6 @@
 }
 
 .fade-transform-leave-to {
-  opacity: 0;
+  opacity: 1;
   transform: translateX(30px);
 }
